Fix visual bug on menu, fix bug on spacing

--- a/static/css/build.scss
+++ b/static/css/build.scss
@@ -35,6 +35,9 @@
     padding: calc(#{var.$spacing} * 8) 0;
     &.big {
       padding: calc(#{var.$spacing} * 12) 0;
+      @include media-breakpoint-down(lg) {
+        padding: calc(#{var.$spacing} * 8) calc(#{var.$spacing} * 3);
+      }
     }
     @include media-breakpoint-down(lg) {
       max-width: 100%!important;
